Fix crash in full screen requests when the window shows no host list

BUG: 416156
FIXED-IN: 19.12.2

Differential Revision: https://phabricator.kde.org/D26917